enum OpsTrackLogLevel
{
	DEBUG,
	INFO,
	WARN,
	ERROR
}