enum OpsTrack_EventType
{
	SELF_HARM = 0,
	KILL = 1,
	WOUNDED = 2,
	JOIN = 3,
	LEAVE = 4
	
}